--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
@@ -24,6 +25,7 @@
     "history": "^4.7.2",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "node-fetch": "^2.2.0",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
